src/test/ui/generator/sized-yield.stderr
error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/sized-yield.rs:7:26
   |
LL |      let mut gen = move || {
   |  __________________________^
LL | |    //~^ ERROR the size for values of type
LL | |        yield s[..];
LL | |    };
   | |____^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `str`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: the yield type of a generator must have a statically known size

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/sized-yield.rs:11:17
   |
LL |    unsafe { gen.resume(); }
   |                 ^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `str`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
